# autoScraper

./: pyproject.toml
data/: webtext.csv
tests/: test_webscraper.py
webscraper/: webscraper.py
