[tool.poetry]
name = "webscraper"
version = "0.1.0"
description = ""
authors = ["izzybolt <izzybolt95@gmail.com>"]
packages = [
    { include = "webscraper" },
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.2"
requests = "^2.26.0"
bs4 = "^0.0.1"
selenium = "^3.141.0"
unittest = "^0.0"
pathlib = "^1.0.1"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
